2017-03-14  Brady Eidson  <beidson@apple.com>

        REGRESSION (r213877): WebKit2.CookieManager fails.
        https://bugs.webkit.org/show_bug.cgi?id=169581

        Reviewed by Tim Horton.

        * UIProcess/WebCookieManagerProxy.cpp:
        (WebKit::WebCookieManagerProxy::processPoolDestroyed): Invalidate the new sets of callbacks.
        (WebKit::WebCookieManagerProxy::processDidClose): Ditto.

2017-03-14  Tomas Popela  <tpopela@redhat.com>

        Fix uninitialized public members in NetworkProcess
        https://bugs.webkit.org/show_bug.cgi?id=169598

        Reviewed by Alex Christensen.

        * NetworkProcess/NetworkProcess.cpp:
        (WebKit::NetworkProcess::NetworkProcess):
        * NetworkProcess/NetworkProcessCreationParameters.h:
        * NetworkProcess/cache/NetworkCacheStorage.cpp:
        * UIProcess/WebProcessPool.cpp:
        (WebKit::WebProcessPool::WebProcessPool):
        * UIProcess/soup/WebProcessPoolSoup.cpp:
        (WebKit::WebProcessPool::platformInitializeNetworkProcess):

2017-03-10  Ada Chan  <adachan@apple.com>

        [Mac] Add API to get the NSURLProtectionSpace from WKProtectionSpaceRef
        https://bugs.webkit.org/show_bug.cgi?id=169494
        <rdar://problem/11872163>

        Reviewed by Dan Bernstein.

        * UIProcess/API/C/mac/WKProtectionSpaceNS.h: Added.
        * UIProcess/API/C/mac/WKProtectionSpaceNS.mm: Added.
        (WKProtectionSpaceCopyNSURLProtectionSpace):
        * WebKit2.xcodeproj/project.pbxproj:

2017-03-14  Wenson Hsieh  <wenson_hsieh@apple.com>

        [WK2] Adopt updated data operation interfaces for data interaction
        https://bugs.webkit.org/show_bug.cgi?id=169414
        <rdar://problem/30948186>

        Reviewed by Tim Horton.

        Plumb additional information about the data interaction caret over to the UI process after handling a data
        interaction action in the web process.

        * UIProcess/WebPageProxy.cpp: